# backend/docs/openapi.json
@@ -182,7 +182,7 @@
         "tags": [
           "Products"
         ],
-        "summary": "Tambah Produk Baru (Admin Only)",
+        "summary": "Tambah Produk Baru (Admin Only) dengan Upload Gambar",
         "security": [
           {
             "bearerAuth": []
@@ -191,13 +191,12 @@
         "requestBody": {
           "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "type": "object",
                 "required": [
                   "name",
-                  "price",
-                  "file_url"
+                  "price"
                 ],
                 "properties": {
                   "name": {
@@ -209,8 +208,13 @@
                   "description": {
                     "type": "string"
                   },
-                  "image_url": {
-                    "type": "string"
+                  "images": {
+                    "type": "array",
+                    "items": {
+                      "type": "string",
+                      "format": "binary"
+                    },
+                    "description": "Upload satu atau banyak file gambar"
                   },
                   "file_url": {
                     "type": "string"
@@ -226,6 +230,9 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Server Error"
           }
         }
       }
